# pptx2md-gui

./: .gitignore  CLI_README.md  GUI_README.md  LICENSE  README.md  build_exe.py  pptx2md_gui.spec  pyproject.toml
archive/: extract_ppt_v0.1.py
ppt2md_script/: README.md  config.py  extract_ppt.py  renderer_markdown.py
pptx2md/: __main__.py  entry.py  image.py  log.py  multi_column.py  outputter.py  parser.py  powerpoint_com.py  types.py  utils.py
pptx2md/ppt_legacy/: __init__.py  config.py  engine.py  extractor_core.py
pptx2md_gui/: __init__.py  __main__.py  app.py  theme.py
pptx2md_gui/components/: __init__.py  drop_zone.py  file_panel.py  log_panel.py  params_panel.py
pptx2md_gui/services/: __init__.py  config_bridge.py  converter.py  preset_manager.py
pptx2md_gui/utils/: __init__.py  tooltip.py  validators.py
tests/: README.md  conftest.py  test_build_exe.py  test_drop_zone_parsing.py  test_extraction.py  test_formatter_runs.py  test_notes_extraction.py  test_ordered_list_start_at.py  test_ppt_legacy.py  test_ppt_legacy_engine_stdio.py  test_ppt_routing.py  test_smoke.py  test_smoke_history_compare.py  test_wmf_com_fallback.py
tests_extract_ppt/: test_extract_ppt_rules.py  test_extractor_core.py
